<resources>
    <string name="app_name">LCT</string>
    <string name="app_crash">很抱歉,程序出现异常,即将退出.</string>
    <string name="app_network_error">网络链接错误，请查看网络是否已连接!</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="empty"></string>
    <string name="msg_toast_title">温馨提示</string>
    <string name="msg_system_error">系统异常请联系客服人员!</string>
    <string name="msg_net_error">网络异常，数据加载失败!</string>
    <string name="bottom_tv_home">首页</string>
    <string name="bottom_tv_find">发现</string>
    <string name="bottom_tv_act">活动</string>
    <string name="bottom_tv_own">我的</string>
    <string name="page_loading">加载中&#8230;</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="close">关闭</string>
    <string name="get_back">返回</string>
    <string name="delete">删除</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="commit">提交</string>
    <string name="permission_context">为了能更好的使用本应用，请授予如下权限。</string>
    <string name="permission_settings">去设置</string>
    <string name="login_title">登录</string>
    <string name="login_et_username">请输入手机号码</string>
    <string name="login_et_password">请输入登录密码</string>
    <string name="login_btn_loginout">退出登录</string>
    <string name="login_tv_forget">忘记密码?</string>
    <string name="login_tv_register">注册新用户</string>
    <string name="login_tv_error_time">密码错误，您还有 %1$s 次输入机会</string>
    <string name="login_tv_lock_toast">您的账户已冻结，账号将在24小时之后自动解冻。</string>
    <string name="login_tv_find_pwd">找回密码</string>
    <string name="login_find_pwd_success">重置密码成功</string>
    <string name="login_tv_call_service">拨打客服</string>
    <string name="login_tv_register_tip">还没有注册会员?</string>
    <string name="register_phone_err">手机号格式错误</string>
    <string name="register_code_send">验证码已发送</string>
    <string name="register_code_err">验证码格式错误</string>
    <string name="register_pwd_old_err">原密码格式不正确</string>
    <string name="register_pwd_new_err">新密码格式不正确</string>
    <string name="register_pwd_err">密码格式不正确</string>
    <string name="register_pwd_dif">两次输入密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_pwd_notnull">密码不能为空</string>
    <string name="register_phone_notnull">账号不能为空</string>
    <string name="register_title">注册</string>
    <string name="register_first_tip">欢迎加入中企智信</string>
    <string name="register_second_tip">设置登录密码</string>
    <string name="register_apply_planner">申请理财师</string>
    <string name="register_planner_hint">请输入理财师推荐码</string>
    <string name="register_phone_hint">请输入您的手机号码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_password_two">请再次输入登录密码</string>
    <string name="register_login_back">返回登录</string>
    <string name="register_set_password">密码设置</string>
    <string name="register_pwd_hint">登录密码由8&#8211;16位数字及字母组成</string>
    <string name="register_invite_code">邀请码</string>
    <string name="register_invit_hint">请输入邀请人（选填）</string>
    <string name="register_register">立即注册</string>
    <string name="register_agree_one">点击注册表示同意</string>
    <string name="register_agree_two">《中企智信用户协议》</string>
    <string name="apply_name">姓名</string>
    <string name="apply_city">所在城市</string>
    <string name="apply_address">居住地址</string>
    <string name="apply_address_hint">请输入居住地址</string>
    <string name="register_apply">申请</string>
    <string name="apply_name_hint">请输入姓名</string>
    <string name="apply_city_hint">请选择所在城市</string>
    <string name="resetpaypwd_title">忘记支付密码</string>
    <string name="resetpaypwd_tips">为了保障资金安全,需要进行校验才可设置新支付密码</string>
    <string name="resetpaypwd_hint_identify">请输入身份证后六位</string>
    <string name="resetpaypwd_hint_code">请输入校验码</string>
    <string name="resetpaypwd_confirm">支付密码确认</string>
    <string name="resetpaypwd_phone">您绑定的手机号码: %1$s </string>
    <string name="resetpaypwd_error_card">请输入身份证后6位</string>
    <string name="resetpaypwd_error_code1">请输入验证码</string>
    <string name="resetpaypwd_error_code2">请输入正确的验证码</string>
    <string name="resetpaypwd_error_pwd">请输入新支付密码</string>
    <string name="resetpaypwd_check_pwd">新支付密码格式不正确</string>
    <string name="resetpaypwd_error_pwdagain">请输入确认密码</string>
    <string name="resetpaypwd_error_notequal">两次输入的密码不一致</string>
    <string name="resetpaypwd_error_illeagle">密码不能包含^+|$</string>
    <string name="findpwd_ed_hint">请输入手机号码</string>
    <string name="findpwd_ed_hint2">请输入新的密码</string>
    <string name="findpwd_ed_hint3">请再次输入新密码</string>
    <string name="findpwd_title">找回密码</string>
    <string name="findpwd_setpwd">密码设置</string>
    <string name="findpwd_tip1">手机号</string>
    <string name="findpwd_tip2">验证码</string>
    <string name="findpwd_tip3">设置新的密码</string>
    <string name="findpwd_tip4">再次输入新密码</string>
    <string name="invitation_title">邀请好友</string>
    <string name="invitation_share_friend">分享给好友</string>
    <string name="invitation_record">好友记录</string>
    <string name="invitation_share_success">分享成功</string>
    <string name="invitation_share_fail">分享失败</string>
    <string name="invitation_share_cancel">分享取消</string>
    <string name="invitation_collect_success">收藏成功</string>
    <string name="home_tv_piaoju">票据投资</string>
    <string name="home_tv_baoli">保理投资</string>
    <string name="home_tv_guquan">股权投资</string>
    <string name="home_tv_fangchan">房产投资</string>
    <string name="list_selectCondition1">投资期限</string>
    <string name="list_selectCondition2">起投金额</string>
    <string name="piaojuList_selectCondition1">资产专区</string>
    <string name="piaojuList_selectCondition2">票据直投</string>
    <string name="detail_subscribe">立即预约</string>
    <string name="detail_limit">项目期限</string>
    <string name="detail_start">起投金额</string>
    <string name="detail_subscribeAll">项目总额</string>
    <string name="detail_subscribeRest">可预约金额</string>
    <string name="introduce_rule1_t">出借规则</string>
    <string name="introduce_rule1">起投金额5万，以1万元的整数倍递增</string>
    <string name="introduce_rule2_t">退出规则</string>
    <string name="introduce_rule2">到期一次性还本付息</string>
    <string name="introduce_incoming_t">预期收益</string>
    <string name="introduce_incoming">单个出借中借款标应计利息=出借本金*年利率*(累计计息天数/365)</string>
    <string name="introduce_rule3_t">计息规则</string>
    <string name="introduce_rule3">即投即息，即T+1,从投资次日开始计算利息，到期付息</string>
    <string name="introduce_use_t">资金用途</string>
    <string name="introduce_use">资金投向电子商业汇票系统ECDS中基于真实贸易背景的支付型优质票据</string>
    <string name="introduce_measure_t">风控措施</string>
    <string name="introduce_measure1">1.线下风控筛选票据资产，线上系统审核承兑企业征信，承兑企业均为上市公司，国企，央企，商业信用优质，保证资金按时到期兑付。</string>
    <string name="introduce_measure2">2.所做票据均为央行开发ECDS系统内电子商业承兑汇票，底层资产真实可查，信息披露及时，公开透明</string>
    <string name="introduce_rule6">即投即息，即T+1,从投资次日开始计算利息</string>
    <string name="introduce_use2">投向国润盛世国际商业保理，为广大的中、小、微企业提供保理融资服务，解决企业在发展过程中所需的流动资金需求</string>
    <string name="in_baoli_rule1_t">账户监管</string>
    <string name="in_baoli_rule1">国润盛世设立应收账款保理专户，监控应收账款的归集及收回，保证受让应收账款按时足额偿付</string>
    <string name="in_baoli_rule2_t">商票质押</string>
    <string name="in_baoli_rule2">原债权人提前开具足额的商业承兑汇票质押于我司，以保证到期可以足额还款</string>
    <string name="in_baoli_rule3_t">对原债权人进行尽职调查</string>
    <string name="in_baoli_rule3">包括但不限于对原债权人经营情况、财务状况、征信状况、法定代表人经历及征信、涉诉涉案情况进行专业调查</string>
    <string name="in_baoli_rule4_t">原债权人关联企业回购责任</string>
    <string name="in_baoli_rule4">原债权人依照保理合同约定承担债权回购责任，同时出具付款承诺函</string>
    <string name="in_baoli_rule0_t">保理债券转让方：</string>
    <string name="in_baoli_rule0">国润盛世国际商业保理(天津有限公司)</string>
    <string name="in_baoli_rule01">国润盛世：国润盛世国际商业保理 （天津有限公司）注册于天津自贸试验区，国润保理以风控为核心，以应收账款融资、资信评估、信用风险担保、账款催收业务为导向，为广大的中、小、微企业提供保理融资服务，解决企业在发展过程中所需的流动资金需求。在政府商业保理政策的支持下，国润保理凭积极开拓商业保理业务，呈现良好的发展势头。</string>
    <string name="audit">已通过</string>
    <string name="audit_1">人工专业验票</string>
    <string name="audit_2">持票企业经营资质审核</string>
    <string name="audit_3">开票企业资质审核</string>
    <string name="audit_4">开票企业票据兑付审核</string>
    <string name="look_compact">预览协议</string>
    <string name="recode_name">预约人</string>
    <string name="recode_num">预约金额</string>
    <string name="recode_time">预约时间</string>
    <string name="project_in">项目介绍</string>
    <string name="project_audit">项目审核</string>
    <string name="project_record">预约记录</string>
    <string name="own_money_name">总投资金额（元）</string>
    <string name="own_incoming_name">待收收益（元）</string>
    <string name="own_incomed_name">已收收益（元）</string>
    <string name="own_moneyRecord">资金记录</string>
    <string name="own_order">我的订单</string>
    <string name="own_returnPlan">回款计划</string>
    <string name="own_info">我的信息</string>
    <string name="own_personIdentify">实名认证</string>
    <string name="own_isNotIdentify">未认证</string>
    <string name="own_isIdentify">已认证</string>
    <string name="own_isNotFail">未通过</string>
    <string name="own_bankcard">绑定银行卡</string>
    <string name="own_planner">我的理财师</string>
    <string name="own_evalution">风险评测</string>
    <string name="own_qualitied">合格投资者确认</string>
    <string name="own_info_headImg">头像</string>
    <string name="own_info_phone">绑定手机</string>
    <string name="own_info_trueName">真实姓名</string>
    <string name="own_info_IDcardNum">身份证号</string>
    <string name="own_info_plannerInviteCode">理财师推荐码</string>
    <string name="own_order_condition1">按时间</string>
    <string name="own_order_condition2">按状态</string>
    <string name="own_order_condition3">按产品</string>
    <string name="own_order_id">订单编号</string>
    <string name="own_order_planMoney">预约金额</string>
    <string name="own_order_predictIncome">预期年化收益</string>
    <string name="order_detail_time">订单时间</string>
    <string name="order_detail_state">订单状态</string>
    <string name="order_detail_username">用户姓名</string>
    <string name="order_detail_phone">手机号码</string>
    <string name="order_detail_paybankcard">打款银行卡</string>
    <string name="order_detail_returnbankcard">回款银行卡</string>
    <string name="order_detail_paynum">用户打款金额</string>
    <string name="order_detail_paydate">用户打款日期</string>
    <string name="order_detail_voucher">用户打款凭证</string>
    <string name="order_detail_voucher_on">点击打开</string>
    <string name="order_detail_voucher_off">收起</string>
    <string name="order_detail_cancel">取消订单</string>
    <string name="own_return_not">待回款</string>
    <string name="own_return_ed">已回款</string>
    <string name="own_return_type">产品类型</string>
    <string name="own_return_All">本息金额</string>
    <string name="own_return_date">汇款日期</string>
    <string name="own_order_cancelTip1">您确定要取消订单吗？</string>
    <string name="own_order_cancelTip2">请填写取消订单的原因：</string>
    <string name="own_setting_title">设置</string>
    <string name="own_setting_security">安全设置</string>
    <string name="own_setting_help">帮助中心</string>
    <string name="own_setting_opinion">意见反馈</string>
    <string name="own_setting_version">版本信息</string>
    <string name="own_setting_contact">联系客服</string>
    <string name="own_security_lock">手势密码开关</string>
    <string name="own_security_changeLoginPwd">修改登录密码</string>
    <string name="own_security_changePhone">更换手机号码</string>
    <string name="own_opinion_tip">请输入您的意见或建议</string>
    <string name="own_opinion_hint">请至少输入10字以上</string>
    <string name="own_identify_name">真实姓名</string>
    <string name="own_identify_idcard">身份证号</string>
    <string name="own_identify_name_hint">请输入真实姓名</string>
    <string name="own_identify_idcard_hint">请输入身份证号</string>
    <string name="own_identify_address">现居住地址</string>
    <string name="own_identify_address_hint">请输入现居住地址</string>
    <string name="own_identify_success">认证成功</string>
    <string name="own_identify_fail">认证失败</string>
    <string name="own_identify_bindingReturn">请绑定会回款银行卡</string>
    <string name="own_version_tip1">当前有最新版本请更新</string>
    <string name="own_version_tip2">已是最新版本</string>
    <string name="own_change_hint1">请输入旧手机动态码</string>
</resources>