<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/x30">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_rule1_t"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_rule1"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/introduce_rule2_t"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_rule2"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/introduce_incoming_t"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_incoming"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/introduce_rule3_t"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_rule3"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/introduce_use_t"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_use"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:background="@mipmap/messure"
            android:gravity="center"
            android:text="@string/introduce_measure_t"
            android:textColor="@color/white"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_measure1"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/introduce_measure2"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/x24" />

        <View style="@style/hLineStyle" />

        <RelativeLayout
            android:id="@+id/rl_look"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_compact"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/x26"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <View style="@style/hLineStyle"
            android:layout_marginBottom="@dimen/y120"
            />

    </LinearLayout>
</ScrollView>