<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y70"
        android:layout_margin="@dimen/y30"
        android:background="@drawable/fillet_record">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x40"
            android:text="@string/recode_name"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/recode_num"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x40"
            android:text="@string/recode_time"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/x26" />
    </RelativeLayout>
</LinearLayout>