<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_grey"
    android:orientation="vertical">

    <include layout="@layout/appbar_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/x30"
        android:textColor="@color/dayAndMark"
        android:text="@string/own_opinion_tip"
        android:layout_marginTop="@dimen/y44"
        android:layout_marginBottom="@dimen/y30"
        android:layout_marginLeft="@dimen/x30"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y480"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        >

        <EditText
            android:id="@+id/et_opinion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/own_opinion_hint"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y30"
            android:maxLength="150"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/hint_grey"
            android:textSize="@dimen/x24" />

    </LinearLayout>

    <TextView
        android:id="@+id/opinion_commit"
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y88"
        android:textColor="@color/white"
        android:textSize="@dimen/x32"
        android:text="@string/commit"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/fillet_loginbtn_normal"
        />

</LinearLayout>